font size warning fixed

--- a/templates/dustin/preamble.tex
+++ b/templates/dustin/preamble.tex
@@ -1,7 +1,8 @@
 % basic packages
-\usepackage{lmodern}
 \usepackage[utf8]{inputenc} %translates input encoding
 \usepackage[T1]{fontenc} %select font encoding
+\usepackage{lmodern}
+\usepackage{anyfontsize}
 \usepackage{textcomp} %supports text symbols (e.g. bullets)
 \usepackage[english]{babel} %change dep. which lang
 \usepackage{url} %including url into latex
