macros and preamble

--- a/templates/dustin/macros.tex
+++ b/templates/dustin/macros.tex
@@ -4,6 +4,8 @@
 % Algebra
 \DeclareMathOperator{\car}{char}
 \DeclareMathOperator{\Quot}{Quot}
+\DeclareMathOperator{\deg}{deg}
+\DeclareMathOperastor{\sgn}{sgn}
 
 % General
 \newcommand{\inv}{^{-1}}
@@ -15,4 +17,8 @@
 \newcommand{\ul}{\underline}
 
 \newcommand{\Sha}{S_{h,a}}
+\newcommand{\Fq}{\F_q}
+\newcommans{\Fp}{\F_p}
+
+\newcommand{\ceq}{\coloneq}
 
