--- a/templates/dustin/macros.tex
+++ b/templates/dustin/macros.tex
@@ -18,7 +18,7 @@
 
 \newcommand{\Sha}{S_{h,a}}
 \newcommand{\Fq}{\F_q}
-\newcommans{\Fp}{\F_p}
+\newcommand{\Fp}{\F_p}
 
 \newcommand{\ceq}{\coloneq}
 
