changes in helper files

--- a/templates/dustin/letterfonts.tex
+++ b/templates/dustin/letterfonts.tex
@@ -7,6 +7,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
+\newcommand{\E}{\mathbb{K}}
 
 % Algebra
 \newcommand{\Qp}{\mathbb{Q}_p}
@@ -16,4 +17,6 @@
 \newcommand{\kp}{\mathfrak p}
 \newcommand{\kq}{\mathfrak q}
 
+\newcommnd{\cA}{\mathcal A}
+\newcommand{\cA}{\mathcal K}
 
