--- a/templates/dustin/macros.tex
+++ b/templates/dustin/macros.tex
@@ -4,8 +4,8 @@
 % Algebra
 \DeclareMathOperator{\car}{char}
 \DeclareMathOperator{\Quot}{Quot}
-\DeclareMathOperator{\deg}{deg}
-\DeclareMathOperastor{\sgn}{sgn}
+\DeclareMathOperator{\sgn}{sgn}
+\DeclareMathOperator{\rang}{rang}
 
 % General
 \newcommand{\inv}{^{-1}}
