small changes in letterfonts

--- a/templates/dustin/letterfonts.tex
+++ b/templates/dustin/letterfonts.tex
@@ -17,6 +17,6 @@
 \newcommand{\kp}{\mathfrak p}
 \newcommand{\kq}{\mathfrak q}
 
-\newcommnd{\cA}{\mathcal A}
-\newcommand{\cA}{\mathcal K}
+\newcommand{\cA}{\mathcal A}
+\newcommand{\cK}{\mathcal K}
 
